# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2015-08-08 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update key2value, keys1value
    * Update syslog as cloudi_x_syslog

2015-08-07 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Make a configuration error log as fatal

2015-08-06 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add synchronous logging macros: LOG_FATAL_SYNC,
      LOG_ERROR_SYNC, LOG_WARN_SYNC, LOG_INFO_SYNC, LOG_DEBUG_SYNC,
      LOG_TRACE_SYNC
        * Add usage of the synchronous logging macros for restarts and stops
          of service instances

2015-08-01 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix Erlang 18.0 bug with erlang:cancel_timer/2 usage
    * Add supool and varpool as cloudi_core dependencies
      (supool was abstracted out of cloudi_core)
    * Update uuid, cpg, quickrand
        * lib/cpg/src/cpg.erl is no longer related to the
          Erlang Public License (related to Apache 2.0 license now,
          due to the pg2 module as it currently exists in
          Erlang/OTP 18.0 kernel-4.0)
        * lib/quickrand/src/random_wh06_int.erl is no longer related to the
          Erlang Public License (related to Apache 2.0 license now,
          due to the random module as it currently exists in
          Erlang/OTP 18.0 stdlib-2.5)
    * Update jinterface to 1.6 (from Erlang/OTP 18.0)
        * Now all the jinterface source code is added to the JAR
          for the Java CloudI API (previously only the required
          dependencies were included)
    * Remove cloudi_service_db_tokyotyrant due to
      etokyotyrant (medici) being under the Erlang Public License and
      abandoned (Tokyo Tyrant usage should migrate to Kyoto Tycoon)

2015-07-29 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add FUNCTION_ARITY macro to cloudi_logger.hrl

2015-07-08 Michael Truog   <mjtruog [at] gmail (dot) com>
